# astrochemschool2024

./: LICENSE  README.rst  pyproject.toml
blue_jwst_slab_models/: Exercise.ipynb
blue_jwst_slab_models/data/QTpy/: 10_1.QTpy  10_2.QTpy  11_2.QTpy  12_2.QTpy  13_1.QTpy  14_1.QTpy  14_2.QTpy  15_1.QTpy  15_2.QTpy  15_3.QTpy  15_4.QTpy  16_1.QTpy  16_2.QTpy  16_3.QTpy  16_4.QTpy  18_1.QTpy  18_2.QTpy  19_1.QTpy  19_4.QTpy  1_3.QTpy  1_4.QTpy  1_6.QTpy  1_7.QTpy  1_8.QTpy  1_9.QTpy  20_1.QTpy  20_3.QTpy  21_1.QTpy  21_2.QTpy  22_1.QTpy  23_1.QTpy  23_3.QTpy  24_1.QTpy  26_1.QTpy  26_2.QTpy  26_3.QTpy  27_3.QTpy  28_1.QTpy  29_1.QTpy  29_2.QTpy  (+54 more)
blue_jwst_slab_models/data/hitran/: CH3CN.par  CS.par  N2.par
green_fiting_ice_obs/: mist.mplstyle  mist.py  nanospace_assignment.ipynb  spectra.json  tools.py
green_fiting_ice_obs/data/all_SED/: 1.txt  2.txt  3.txt  4.txt  5.txt
green_rotational_spectroscopy_CO/: CO-linelist.ovr
notebooks/: Exercise1.ipynb
orange_astrochem_large_carbon_molecules/PAH_mol_proc/scripts/: Exercise2_rates.ipynb  plot_rrkm_rates.ipynb
src/data/: H2_lines.csv  __init__.py  atomic_lines.csv
src/data/QTpy/: 11_1.QTpy  12_1.QTpy  13_2.QTpy  13_3.QTpy  17_1.QTpy  17_2.QTpy  19_2.QTpy  19_3.QTpy  19_5.QTpy  19_6.QTpy  1_1.QTpy  1_2.QTpy  1_5.QTpy  20_2.QTpy  22_2.QTpy  22_3.QTpy  23_2.QTpy  24_2.QTpy  25_1.QTpy  27_1.QTpy  27_2.QTpy  2_1.QTpy  2_13.QTpy  2_2.QTpy  2_4.QTpy  2_5.QTpy  2_7.QTpy  2_9.QTpy  30_1.QTpy  31_3.QTpy  33_1.QTpy  36_1.QTpy  37_1.QTpy  37_2.QTpy  38_1.QTpy  38_3.QTpy  39_1.QTpy  3_1.QTpy  3_10.QTpy  3_12.QTpy  (+47 more)
src/data/hitran/: CH3OH.par  H2.par  SO3.par
(+298 files in other folders)
